--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,49 +6,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/nu_gewicht_id" android:layout_marginBottom="12dp"
-            app:layout_constraintBottom_toTopOf="@+id/button_id" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="70dp" android:layout_marginEnd="70dp"/>
-    <Button
-            android:text="@string/button_text"
-            android:layout_width="126dp"
-            android:layout_height="63dp"
-            android:id="@+id/button_id" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="334dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="143dp"
-            android:layout_marginRight="143dp"/>
     <TextView
-            android:text="Körpergröße:"
-            android:layout_width="99dp"
-            android:layout_height="16dp"
-            android:id="@+id/groesse_id"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="232dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-    <TextView
-            android:text="Körpergewicht:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/gewicht_id" android:layout_marginTop="41dp"
-            app:layout_constraintTop_toBottomOf="@+id/groesse_id"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/nu_groesse_id" android:layout_marginBottom="12dp"
-            app:layout_constraintBottom_toTopOf="@+id/nu_gewicht_id" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/out_id" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/button_id" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="179dp" android:layout_marginStart="179dp"/>
+            android:text="TextView"
+            android:layout_width="114dp"
+            android:layout_height="41dp"
+            android:id="@+id/text_id"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="345dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="149dp"
+            android:layout_marginRight="149dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
