--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
         tools:context=".MainActivity">
     <TextView
             android:text="TextView"
-            android:layout_width="114dp"
-            android:layout_height="41dp"
+            android:layout_width="322dp"
+            android:layout_height="500dp"
             android:id="@+id/text_id"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="345dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="149dp"
-            android:layout_marginRight="149dp"/>
+            android:layout_marginEnd="45dp" android:layout_marginRight="45dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="53dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
