--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <TextView
-            android:text="TextView"
-            android:layout_width="215dp"
-            android:layout_height="423dp"
-            android:id="@+id/text_id"
-            android:layout_marginEnd="45dp" android:layout_marginRight="45dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="53dp"/>
+    <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:name="com.example.tutorialapp.fragment_button"
+            android:id="@+id/fragment" android:layout_marginEnd="284dp"
+            android:layout_marginRight="284dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
