--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <fragment
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:name="com.example.tutorialapp.fragment_button"
-            android:id="@+id/fragment" android:layout_marginEnd="284dp"
-            android:layout_marginRight="284dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="72dp"/>
+            android:id="@+id/fragment" android:layout_marginEnd="64dp"
+            android:layout_marginRight="64dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="88dp"
+            tools:layout="@layout/fragment"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
